--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -9,6 +9,6 @@
         </div>
     </div>
     <div class="container-item">
-        <time-picker [type]="TimePickerType.AnalogClock"/>
+        <time-picker [type]="TimePickerType.ClockDigitalSix"/>
     </div>
 </div>
