--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
 * {
-  box-sizing: border-box;
-  margin: 0;
+  /* overflow-y: hidden; */
+  overflow-x: visible;
   padding: 0;
-}
-
-body {
-  font-family: Arial, sans-serif;
-  background-color: #000; /* Fondo negro */
-  color: #fff; /* Texto blanco */
+  margin: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
