--- a/src/app/clock-digital-three/clock-digital-three.component.html
+++ b/src/app/clock-digital-three/clock-digital-three.component.html
@@ -1,4 +1,6 @@
-<div class="reloj">
-  <p class="fecha">{{ currentDate }}</p>
-  <p class="tiempo">{{ currentTime }}</p>
+<div class="reloj-container">
+  <div class="reloj">
+    <p class="fecha">{{ currentDate }}</p>
+    <p class="tiempo">{{ currentTime }}</p>
+  </div>
 </div>
