--- a/src/app/clock-digital-four/clock-digital-four.component.html
+++ b/src/app/clock-digital-four/clock-digital-four.component.html
@@ -1,7 +1,9 @@
-<div class="clock">
-  <div class="hour">{{ hour }}</div>
-  <div>:</div>
-  <div class="minute">{{ minute }}</div>
-  <div>:</div>
-  <div class="second">{{ second }}</div>
+<div class="clock-container">
+  <div class="clock">
+    <div class="hour">{{ hour }}</div>
+    <div>:</div>
+    <div class="minute">{{ minute }}</div>
+    <div>:</div>
+    <div class="second">{{ second }}</div>
+  </div>
 </div>
